--- a/flex2.html
+++ b/flex2.html
@@ -10,11 +10,11 @@
     <!-- Modifier le code CSS suivant pour réaliser l'exercice -->
     <style>
         ul {
-
+            display: flex;
         }
 
         li {
-
+            width:calc(100% / 3);
         }
     </style>
 </head>
