--- a/flex2.html
+++ b/flex2.html
@@ -14,7 +14,10 @@
         }
 
         li {
-            width:calc(100% / 3);
+            /*width:calc(100% / 3);*/
+            flex-grow: 1;
+            flex-shrink: 1;
+            flex-basis: 0;
         }
     </style>
 </head>
