--- a/flex2.html
+++ b/flex2.html
@@ -16,7 +16,7 @@
         li {
             /*width:calc(100% / 3);*/
             flex-grow: 1;
-            flex-shrink: 1;
+            flex-shrink: 1; /* rétrecir*/
             flex-basis: 0;
         }
     </style>
