--- a/flex1.html
+++ b/flex1.html
@@ -11,7 +11,7 @@
     <style>
         nav ul {
             display: flex;
-            justify-content: space-around;
+            justify-content: space-between;
 
 
         }
