--- a/flex3.html
+++ b/flex3.html
@@ -10,6 +10,10 @@
     <!-- Modifier le code CSS suivant pour réaliser l'exercice -->
     <style>
         .parent {
+            display:flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
 
         }
 
